# limitless-pi

./: CITATION.cff  CMakeLists.txt  README.md  Readme.txt
conf/: celliahosts  celliahosts03_13-31_34-49  celliahosts3-10  celliahosts3-13-47  cpu_test.sh  cpu_workflow.sh  deleteCelliaLogs.sh  generateIBlog.sh  getLogsCellia.sh  hosts11x  init.xml  init2.xml  init_tucan.xml  start.sh  start_daemons.sh  start_file.sh  start_tucan.sh  stop.sh
conf/init_files/: confa.dae  confa.serv  init.dae
conf/launch with topology/: starttopology.sh  stoptopology.sh
conf/launch with watchdogs/: start_watchdogs.sh  stop_watchdogs.sh  watchdog_daemon.sh  watchdog_server.sh
include/: Packed_sample.hpp  cliente_monitor.hpp  common.hpp  connector.h  cpu_info.hpp  daemon_monitor.hpp  network_data.hpp  servidor_monitor.hpp  system_features.hpp
src/: Packed_sample.cpp  cliente_monitor.cpp  connector.cpp  cpu_info.cpp  daemon_monitor.cpp  devices_info.cpp  library.cpp  net_info.cpp  network_data.cpp  power_cpu_info.cpp  server_data.cpp  servidor_monitor.cpp  system_features.cpp
test_server/: CMakeLists.txt  test_server.cpp
utils/: daemon_reader.py
